# big-query-kusto-client

./: .gitignore  CONTRIBUTING.md  pyproject.toml  pytest.ini
.github/workflows/: publish-package.yml  python-app.yml
src/big_query_kusto_client/: bigquerykustoclient.py
tests/: test_unit.py
