[tool.poetry]
name = "big-query-kusto-client"
version = "0.1.0"
description = "Wrapper around azure-kusto client to facilitate bringing BIG query results while avoiding hitting the limits"
authors = ["JJ Triff <jjtriff@gmail.com>"]
readme = "README.md"
packages = [{include = "big_query_kusto_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
